completely fixed resizing issue spill

--- a/css/About.css
+++ b/css/About.css
@@ -98,7 +98,7 @@ body {
   margin-left: 10px; /* Space between icons */
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 780px) {
   .navbar-container {
     display: flex;
     justify-content: center;
